hg participate in event show and js fix bug

--- a/app/assets/stylesheets/atoms/buttons.scss
+++ b/app/assets/stylesheets/atoms/buttons.scss
@@ -71,3 +71,8 @@
       gap: 8px;
    }
 
+   .fix {
+      width: 174px !important;
+      height: 42px !important;
+      padding: 0 !important;
+   }
