--- a/app/views/events/_event_participate_buttons.html.erb
+++ b/app/views/events/_event_participate_buttons.html.erb
@@ -2,7 +2,7 @@
   <div class="button-participate btns-event-<%= event.id %>">
     <%if find_participation(event,current_user) %>
 
-      <%=button_to event_participation_path(event, find_participation(event,current_user)), method: :delete, :class => "button primary-outline", remote: true do %>
+      <%=button_to event_participation_path(event, find_participation(event,current_user)), method: :delete, :class => "button primary-outline fix", remote: true do %>
       <i class="bi bi-bookmark-check-fill"></i>&nbsp; Ne plus participer<%end%>
 
       <% elsif event.is_full? %>
@@ -11,7 +11,7 @@
 
       <%else%>
 
-      <%=button_to event_participations_path(event),method: :post,:class => "button primary", remote: true do %>
+      <%=button_to event_participations_path(event),method: :post,:class => "button primary fix", remote: true do %>
       <i class="bi bi-bookmark-plus"></i></i>&nbsp; Participer <%end%>
 
     <%end%>
