--- a/app/views/participations/_participate_button.html.erb
+++ b/app/views/participations/_participate_button.html.erb
@@ -1,2 +1,2 @@
-      <%=button_to event_participations_path(event),method: :post,:class => "button primary", remote: true do %>
+      <%=button_to event_participations_path(event),method: :post,:class => "button primary fix", remote: true do %>
       <i class="bi bi-bookmark-plus"></i></i>&nbsp; Participer <%end%>
