--- a/app/assets/stylesheets/pages/city/city_index.scss
+++ b/app/assets/stylesheets/pages/city/city_index.scss
@@ -3,45 +3,38 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.city-container{
-   flex-direction: row !important;
+.city-index-container{
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
    
-   .twins {
-      position: relative;
-      top: 20px;
-      right: 30px;
+   .card{
+      display: flex;
+      gap: 20px;
+      text-align: center;
+      box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 
-      .title-lign{
-         width: 100px;
+      .card-title{
+         color: var(--black);
+         z-index: 1;
       }
    }
 
-   .picture-container{
-      display: flex;
-      flex: 6;
+   img{
+     max-width: 170px; 
+     width: 170px;
+     height: 90px ;
+     max-height: 90px;
    }
+}
 
-   .city-img{
-      background: url(https://images.unsplash.com/photo-1511739001486-6bfe10ce785f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80) !important;
-      background-repeat: no-repeat !important;
-      background-size: 100% !important;
-      height: 100vh !important;
-      background-position: 40% 70% !important;
-   }
-
-   .card-container{
-      display: flex;
-      flex-direction: column;
-      flex: 4;
-   }
-
-   
-
-   .card-title{
-      font-style: var(--medium-font);
-      color: var(--black);
-      position: absolute;
-      left: 10px;
-   }
-
+.title-lign{
+   position: absolute;
+   top: 36px;
+   width: 75px;
+   height: 6px;
+   padding: 0;
+   margin: 0;
+   background: #EEB115;
+   z-index: 0;
 }
