--- a/app/views/messages/_friends_list.html.erb
+++ b/app/views/messages/_friends_list.html.erb
@@ -1,4 +1,4 @@
-<p class="card-title"> Tes conversations </p>
+<p class="card-title"> Tes amis </p>
 <div class="friends-list">
   <ul>
     <% if current_user.friends.length == 0%>
