--- a/app/assets/stylesheets/pages/event/show_detail_event.scss
+++ b/app/assets/stylesheets/pages/event/show_detail_event.scss
@@ -4,10 +4,10 @@
 }
 
 .event-show-image{
-
    width: 100%;
-
+   
    img{
+      border-radius: 15px;
       width: 100%;
    }
 }
@@ -23,8 +23,9 @@
    position: relative;
 
    .event-content{
-      h3{
-         margin-bottom: 10px;
+
+      p:nth-child(1){
+         margin-bottom: 10px !important;
       }
 
    }
@@ -43,6 +44,6 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      gap: 8px;
+      gap: 9px;
    }
 }
