--- a/app/views/events/_event_participations_detail.html.erb
+++ b/app/views/events/_event_participations_detail.html.erb
@@ -9,17 +9,8 @@
          <%else%>
                <%= image_tag "defaultavatar.png", alt: 'avatar', :class => "events-avatar" %>
          <%end%> 
-          <%=participation.user.first_name%> 
-          <%=participation.user.last_name%> 
+         <%= link_to participation.user.full_name, controller: "users", action: "show", id: participation.user.id  %>
       </div>  
-
       <%end%>
-         <% if current_user%>
-            <div class="button-participate btns-event-<%= event.id %> ">
-               <%=button_to event_participation_path(event, find_participation(event,current_user)), method: :delete, :class => "button primary-outline fix", remote: true do %>
-               <i class="bi bi-bookmark-check-fill"></i>&nbsp; Ne plus participer
-               <%end%>
-            </div>
-         <%end%>
    <%end%>
 </div>
