--- a/app/views/events/_show_event.html.erb
+++ b/app/views/events/_show_event.html.erb
@@ -13,11 +13,16 @@
           <p> <%= event.date.strftime("%B") %>  </p>
         </div>
         <div class="event-content"> 
-          <h3> <%= link_to event.title, event_path(event) %>  </h3>
-          <p> <%= event.description %>  </p>
+          <h3> <%= link_to event.title, controller: "events", action: "show", id: event.id %>  </h3>
+          <%if event.description == nil %>
+               <p> L'event n'a pas de description. </p>
+         <%else%>
+               <p> <%= event.description %>  </p>
+          <%end%>
+          <br>
           <%= render partial: 'events/event_participations_detail', locals: {event: event}%> 
+          <%= render partial: 'events/event_participate_buttons', locals: {event: event}%>
         </div>
-
         <div class="event-sport-tag"> <%=event.sport.name%> </div>
    </div>
 </div>
