--- a/app/views/users/_other_user_show.html.erb
+++ b/app/views/users/_other_user_show.html.erb
@@ -4,7 +4,7 @@
   <div class="user-primary-info">
     <div class="user-primary-image">
       <%if @user.avatar.attached?%>
-        <%= image_tag @user.avatar, alt: 'avatar' %>
+        <%= image_tag @user.avatar, alt: 'avatar.png' %>
       <%else%>
         <%= image_tag 'avatar.png' %>
       <%end%>
