--- a/app/assets/stylesheets/atoms/map.scss
+++ b/app/assets/stylesheets/atoms/map.scss
@@ -35,8 +35,148 @@ max-width: 200px;
     font-size: 1.1rem;
     font-family: var(--black-font);
   }
+}
 
-  h3{
+.wrapper-container{
+  display: flex;
+  overflow-x: scroll;
+  margin-left: 7%;
+  margin-top: 80px;
+}
 
+div[class*="checkbox-container"]{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  width: fit-content;
+  margin:0px 10px 5px 0px;
+  padding: 8px 12px;
+  border-radius: 20px;
+  width: 90px;
+  height: 40px;
+  position: relative;
+
+  input[type="checkbox"]:not(:checked), input[type="checkbox"]:checked{
+     cursor: pointer;
+     position: absolute;
+     margin: 0;
+     z-index: 7;
+     opacity: 0;
+     width: fit-content;
+     transform: scaleX(37) scaleY(2.5);
+  }
+  
+  .ghost-check{
+     border: 2px solid black;
+     position: absolute;
+     top: 0;
+     bottom: 0;
+     left: 0;
+     right: 0;
+     z-index: 0;
+     border-radius: 20px;
+  }
+
+  label{
+     position: absolute;
+     z-index: 3;
+     color: black;
+     font-weight: 500;
+  }
+}
+
+.checkbox-container-Running {
+  &:hover{
+     background-color: pink !important;
+  }
+  &:hover > .ghost-check{
+     border : none;
+  }
+  &:hover > label{
+     color: white;
+  }
+  input[type="checkbox"]:checked ~ .ghost-check{
+     background-color: pink !important;
+     border: none;
+  }
+  input[type="checkbox"]:checked ~ label{
+     color: white;
+  }
+}
+
+.checkbox-container-Futsal {
+  &:hover{
+     background-color: yellow !important;
+  }
+  &:hover > .ghost-check{
+     border : none;
+  }
+  &:hover > label{
+     color: black;
+  }
+  input[type="checkbox"]:checked ~ .ghost-check{
+     background-color: yellow !important;
+     border: none;
+  }
+  input[type="checkbox"]:checked ~ label{
+     color: black;
+  }
+}
+
+.checkbox-container-Workout {
+  &:hover{
+     background-color: palevioletred !important;
+  }
+  &:hover > .ghost-check{
+     border : none;
+  }
+  &:hover > label{
+     color: white;
+  }
+  input[type="checkbox"]:checked ~ .ghost-check{
+     background-color: palevioletred !important;
+     border: none;
+  }
+  input[type="checkbox"]:checked ~ label{
+     color: white;
+  }
+}
+
+.checkbox-container-Climbing {
+  &:hover{
+     background-color: purple !important;
+  }
+  &:hover > .ghost-check{
+     border : none;
+  }
+  &:hover > label{
+     color: white;
+  }
+  input[type="checkbox"]:checked ~ .ghost-check{
+     background-color: purple !important;
+     border: none;
+  }
+  input[type="checkbox"]:checked ~ label{
+     color: white;
+  }
+}
+
+.checkbox-container-Tennis {
+  &:hover{
+     background-color: darkblue !important;
+  }
+  &:hover > .ghost-check{
+     border : none;
+  }
+  &:hover > label{
+     color: white;
+  }
+  input[type="checkbox"]:checked ~ .ghost-check{
+     background-color: darkblue !important;
+     border: none;
+  }
+  input[type="checkbox"]:checked ~ label{
+     color: white;
   }
 }
