fixing bug image

--- a/app/views/events/_show_event.html.erb
+++ b/app/views/events/_show_event.html.erb
@@ -3,7 +3,7 @@
       <% if event.image.attached? %> 
          <%= image_tag event.image %>
       <%else%>
-         <%= image_tag 'eventdefault' %>
+         <%= image_tag 'eventdefault.png' %>
     <% end %>
    </div>
 
