--- a/app/views/messages/_message_display.html.erb
+++ b/app/views/messages/_message_display.html.erb
@@ -1,6 +1,6 @@
   <div class="message-inline <%if message.sender == current_user%>own<%end%>">
       <div class="message-<%if message.sender == current_user%>own<%else%>other<%end%>">
-        <p>Moi: <%=message.body%></p>
+        <p><%if message.sender == current_user%>Moi<%else%><%=message.sender.full_name%><%end%>: <%=message.body%></p>
         <div class="message-time">
         <p><%=message.created_at.strftime("at %I:%M%p")%></p>
         </div>
