translate in french

--- a/app/views/devise/registrations/_form_element.html.erb
+++ b/app/views/devise/registrations/_form_element.html.erb
@@ -15,7 +15,7 @@
 
             <div class ="middle-content-password">
              <div class="input">
-              <p class="input-name">Password  
+              <p class="input-name">Mot de passe  
                 <% if @minimum_password_length %>
                 <span>(<%= @minimum_password_length %> characters minimum)</span>
                 <% end %>
