--- a/app/views/devise/registrations/_top_element.html.erb
+++ b/app/views/devise/registrations/_top_element.html.erb
@@ -1,6 +1,6 @@
  <div class="top-element">
         <div class="twins">
-          <h1 class="title">Create your account</h1>
+          <h1 class="title">Créer un compte</h1>
           <div class ="modif-lign title-lign"> </div>
         </div>
         <p class="under-title">Connecte toi à ton compte pour voir tes amis et tes performances sportives</p>
