--- a/app/views/layouts/tabs/tab_links/_events_active.html.erb
+++ b/app/views/layouts/tabs/tab_links/_events_active.html.erb
@@ -1,4 +1,4 @@
 <%= link_to events_path, 'aria-selected' => true do %>
-   <i class="fa-solid fa-calendar-days"></i> Events 
+   <i class="fa-solid fa-calendar-days"></i> Événements 
    <%= render "layouts/tabs/span_indicator" %>
  <% end%>
