--- a/app/views/static_pages/_features_lp.html.erb
+++ b/app/views/static_pages/_features_lp.html.erb
@@ -11,7 +11,7 @@
    <div class="feature">
       <div class="feature-content">
          <p class="feature-tag"> Feature 1 </p>
-         <h3 class="feature-title"> Stay connected. <br> With sport </h3>
+         <h3 class="feature-title"> Restez connecté <br> Avec le sport </h3>
          <p class="feature-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
          <%= button_to 'Se connecter', new_user_session_path, class: 'button primary'%>
          <p class="feature-number"> 01 </p>
@@ -23,8 +23,8 @@
       <div class="feature">
          <div class="img-wrapper"> <%= image_tag "feature2.png" %> </div>
          <div class="feature-content">
-            <p class="feature-tag" > Feature 1 </p>
-            <h3 class="feature-title" style="color:rgb(var(--white))"> Stay connected. <br> With sport </h3>
+            <p class="feature-tag" > Feature 2 </p>
+            <h3 class="feature-title" style="color:rgb(var(--white))"> Restez connecté <br> Avec le sport </h3>
             <p class="feature-text" style="color:rgb(var(--white))"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
             <%= button_to 'Se connecter', new_user_session_path, class: 'button primary'%>
          <p class="feature-number" style="left:-150px; color:rgba(var(--white), 0.5)"> 02 </p>
@@ -33,8 +33,8 @@
 
       <div class="feature">
          <div class="feature-content">
-            <p class="feature-tag"> Feature 1 </p>
-            <h3 class="feature-title" style="color:rgb(var(--white))"> Stay connected. <br> With sport </h3>
+            <p class="feature-tag"> Feature 3 </p>
+            <h3 class="feature-title" style="color:rgb(var(--white))"> Restez connecté <br> Avec le sport </h3>
             <p class="feature-text" style="color:rgb(var(--white))"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
             <%= button_to 'Se connecter', new_user_session_path, class: 'button primary'%>
             <p class="feature-number" style="color:rgba(var(--white), 0.5)"> 03 </p>
