--- a/app/views/static_pages/_sports_lp.html.erb
+++ b/app/views/static_pages/_sports_lp.html.erb
@@ -49,7 +49,7 @@
             <div class="circle circle-climbing"></div>
                <div class="cart-img"> <%= image_tag "Sports-icon.png" %></div>
             </div>   
-            <h3 class="text-cart"> Climbing</h3>
+            <h3 class="text-cart"> Escalade </h3>
          
       </div>
 
