--- a/app/views/users/performances/_climbing_edit_form.html.erb
+++ b/app/views/users/performances/_climbing_edit_form.html.erb
@@ -28,7 +28,7 @@
       </div>
       
       <div class="input col-sm">
-        <p class="input-name">Level</p>
+        <p class="input-name">Niveau</p>
         <div class="input-wrapper">
         <%if user.last_climbing_perf%>
             <%= f.select :level, options_for_select(ClimbingLevel.all.map{|level| level.level}, user.last_climbing_perf.level ),placeholder: "Entrez votre niveau" %>
@@ -40,7 +40,7 @@
       </div>
 
       <div class="input col-sm">
-        <p class="input-name">Block color</p>
+        <p class="input-name">Bloque de couleur</p>
         <div class="input-wrapper">
           <%if user.last_climbing_perf%>
             <%= f.select :block_color, options_for_select(ClimbingBlockColor.all.map{|block_color| block_color.block_color}, user.last_climbing_perf.block_color ),placeholder: "Entrez votre niveau" %>
