--- a/app/views/users/performances/_running_edit_form.html.erb
+++ b/app/views/users/performances/_running_edit_form.html.erb
@@ -27,7 +27,7 @@
       </div>
 
       <div class="input col-sm">
-        <p class="input-name">Speed</p>
+        <p class="input-name">Vitesse</p>
         <div class="input-wrapper">
         <%if user.last_running_perf%>
             <%= f.number_field :speed, value:user.last_running_perf.speed ,placeholder: "Rentrez votre vitesse" %>
