--- a/app/views/layouts/tabs/tab_links/_events_inactive.html.erb
+++ b/app/views/layouts/tabs/tab_links/_events_inactive.html.erb
@@ -1,3 +1,3 @@
 <%= link_to events_path do %>
-   <i class="fa-solid fa-calendar-days"></i> Events 
+   <i class="fa-solid fa-calendar-days"></i> Événements
  <% end%>
