--- a/app/views/layouts/tabs/tab_links/_home_active.html.erb
+++ b/app/views/layouts/tabs/tab_links/_home_active.html.erb
@@ -1,4 +1,4 @@
 <%= link_to user_path(current_user), 'aria-selected' => true do %>
-   <i class='fa-solid fa-home'></i> Home 
+   <i class='fa-solid fa-home'></i> Accueil 
    <%= render "layouts/tabs/span_indicator" %>
  <% end%>
