LL adding scrollbar to messages

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -43,4 +43,8 @@
     justify-content: flex-end;
 }
 
-
+.message-display{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
