--- a/app/views/messages/update.js.erb
+++ b/app/views/messages/update.js.erb
@@ -3,3 +3,4 @@ document.getElementById("message-display").innerHTML = "";
 document.getElementById("message-display").insertAdjacentHTML("beforeend", "<%= j render 'conversation', {conversation: @conversation, user: @message.recipient}%> ");
 document.getElementById("form-message").innerHTML = "";
 document.getElementById("form-message").insertAdjacentHTML("beforeend", "<%= j render 'form', {message: @new_message, recipient: @recipient } %>  ");
+document.getElementById("message-display").scrollTop = document.getElementById("message-display").scrollHeight;
