--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -2,11 +2,12 @@
 document.getElementById("title-conversation").innerText="<%=@recipient.full_name%>"
 document.getElementById("form-message").innerHTML = "";
 document.getElementById("form-message").insertAdjacentHTML("beforeend", "<%= j render 'form', {message: @new_message, recipient: @recipient}%> ")
+var display = document.getElementById("message-display");
 <%if @already_conversation%>
-    document.getElementById("message-display").insertAdjacentHTML("beforeend", "<%= j render 'message_display', message: @message%> ");
+    display.insertAdjacentHTML("beforeend", "<%= j render 'message_display', message: @message%> ");
 <%else%>
-    document.getElementById("message-display").innerHTML = "";
+    display.innerHTML = "";
 <%end%>
-document.getElementById("message-display").scrollTop = document.getElementById("message-display").scrollHeight;
+display.scrollTop = document.getElementById("message-display").scrollHeight;
 
 
