LL fixing running_perf_show distance display

--- a/app/views/users/performances_show/_running_perf_show.html.erb
+++ b/app/views/users/performances_show/_running_perf_show.html.erb
@@ -16,6 +16,6 @@
     <div class="perf-divide"> </div>
     <div class="performance-show-item">
       <p class="performance-show-title"> Distance moyenne </p>
-      <p class="performance-show-data"> <%= user.last_running_perf.speed %>km  </p>
+      <p class="performance-show-data"> <%= user.last_running_perf.distance %>km  </p>
     </div>
 </div>
