--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,11 @@
               <%= image_tag "defaultavatar.png", :style => "width:50px;" %>
             <%end%>
           </div>
+          <% if current_user.first_name%>
           <span>  <%= link_to current_user.first_name, edit_user_path(current_user)%> </span>
+          <%else%>
+            <span>  <%= link_to "Toi", edit_user_path(current_user)%> </span>
+          <%end%>
         </div>
         <div class="separate-div" style="margin-left: 37px"></div>
         <nav class="menu" role="tablist">
