--- a/app/views/connections/_friend_list.html.erb
+++ b/app/views/connections/_friend_list.html.erb
@@ -1,5 +1,5 @@
 <div class='card container-friends-list'>
-  <p class="card-title"> Your friends </p>
+  <p class="card-title"> Tes Amis </p>
   <p class="card-icon"> <i class="fa-solid fa-bell"></i> </p>
   <div class="friends-list">
     <ul>
