--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-dashboard">
     <div class="edit-profil-btn">
-      <h1> Events 📆</h1> 
+      <h1> Événements 📆</h1> 
       <%= link_to 'Crée un event', new_event_path, class:'button primary' %>
     </div>
 
