--- a/app/views/static_pages/_sports_lp.html.erb
+++ b/app/views/static_pages/_sports_lp.html.erb
@@ -28,7 +28,7 @@
                <div class="circle circle-workout"></div>
                <div class="cart-img"><%= image_tag "Gymming-card.png" %></div>
             </div>   
-            <h3 class="text-cart"> Workout </h3>
+            <h3 class="text-cart"> Musculation </h3>
          
       </div>
 
@@ -39,7 +39,7 @@
             <div class="circle circle-running"></div> 
                <div class="cart-img"><%= image_tag "running-card.png" %></div>
             </div>   
-            <h3 class="text-cart"> Running </h3>
+            <h3 class="text-cart"> Course </h3>
          
       </div>
 
