--- a/app/views/users/_edit_performance.html.erb
+++ b/app/views/users/_edit_performance.html.erb
@@ -3,9 +3,9 @@
       <p class="card-icon"> <i class="fa-solid fa-pen-to-square" ></i> </p>
       
       <div class="tab">
-        <button class="tablinks first-tab" onclick="openPerf(event, 'Climbing')" id="defaultOpen">Climbing</button>
-        <button class="tablinks" onclick="openPerf(event, 'Running')">Running</button>
-        <button class="tablinks" onclick="openPerf(event, 'Workout')">Workout</button>
+        <button class="tablinks first-tab" onclick="openPerf(event, 'Climbing')" id="defaultOpen">Escalade</button>
+        <button class="tablinks" onclick="openPerf(event, 'Running')">Course</button>
+        <button class="tablinks" onclick="openPerf(event, 'Workout')">Musculation</button>
         <button class="tablinks" onclick="openPerf(event, 'Tennis')">Tennis</button>
       </div>
 
