seed city picture and wrap city index

--- a/app/assets/stylesheets/pages/city/city_index.scss
+++ b/app/assets/stylesheets/pages/city/city_index.scss
@@ -5,8 +5,10 @@
 
 .city-index-container{
    display: flex;
+   flex-wrap: wrap;
    flex-direction: row;
-   justify-content: space-between;
+   justify-content: center;
+   gap: 30px;
    
    .card{
       display: flex;
