LL improving the edit profile

--- a/app/views/users/_edit_info-sensitive.html.erb
+++ b/app/views/users/_edit_info-sensitive.html.erb
@@ -27,7 +27,7 @@
             <div class="input col-sm">
                <p class="input-name">Mot de passe </p>
                <div class="input-wrapper">
-               <%= form.text_field :password%>
+               <%= form.password_field :password%>
                <i class="fa-solid fa-user"></i>
                </div> 
             </div>
