LL hanging color title and removing  coma in adress full_name

--- a/app/assets/stylesheets/root/root.scss
+++ b/app/assets/stylesheets/root/root.scss
@@ -16,7 +16,7 @@ body {
    --grey-bg :#F4F4F4;
    --text-grey :#575757;
    --grey-bg :#F4F4F4;
-   --border-grey :#C8C8C8
+   --border-grey :#969494
    ;
 
    /* PRIMARY */
