--- a/app/assets/stylesheets/pages/landing-page/contact.scss
+++ b/app/assets/stylesheets/pages/landing-page/contact.scss
@@ -14,8 +14,9 @@
 .element-contain{
 display: flex;
 align-items: center;
-justify-content: space-between;
-padding: 0px;
+justify-content: center;
+flex-wrap: wrap;
+gap: 170px;
 width: 100vw;
 
 }
@@ -24,7 +25,7 @@ width: 100vw;
 .container-left{
    display: flex;
    flex-direction: row;
-   align-items: flex-start;
+   align-items: center;
    padding: 15px;
    
    border: 15px solid var(--grey-bg);
