--- a/app/views/users/notif-meteo/_notif_meteo.html.erb
+++ b/app/views/users/notif-meteo/_notif_meteo.html.erb
@@ -22,10 +22,16 @@
       <p class="card-title"> Météo </p>
       <% if @user.city %>
       <p class="card-icon"> <i class="fa-solid fa-cloud-sun"></i> </p>
-       <h2 id="city-name">  <%= @user.city.name%> </h2>
-       <p> Température : <span class="temp"> </span>° </p>
-       <p> Humidité : <span class="hum"> </span>% </p>
-       <p> Nuages : <span class="clouds"> </span>%</p>
+      <div>
+         <h2 id="city-name" style="display:none">  <%= @user.city.name%> </h2>
+         <p> <i class="fa-solid fa-droplet"></i> <span class="hum"> </span>% </p>
+         <p> <i class="fa-solid fa-cloud"></i> <span class="clouds"> </span>%</p>
+         <p><i class="fa-solid fa-wind"></i><span class="wind"> </span>km/h</p>
+       </div>
+       <div class="temp-wrapper">
+         <p class="temp-img">   </p>
+         <p class="temp-para">  <span class="temp"> </span>° </p>
+       </div>
        <%else%>
        <p>Pas de ville renseignée</p>
        <%end%>
