--- a/app/views/users/performances/_tennis_edit_form.html.erb
+++ b/app/views/users/performances/_tennis_edit_form.html.erb
@@ -40,6 +40,7 @@
           <div class="input">
             <div class="actions" style="margin:15px 0px 0px 1px">
               <%= f.submit('Sauvegarder') %>
+              <%= link_to "Arreter ce sport", sport_user_path(user.get_sport_user("Tennis")), method: :delete, class:"button delete-btn", data: { confirm: '"Toutes tes performances seront effacées, es tu sur ?'}%>
             </div>
           </div>
       </div>
