responsive landing page

--- a/app/assets/stylesheets/pages/landing-page/convinced.scss
+++ b/app/assets/stylesheets/pages/landing-page/convinced.scss
@@ -47,8 +47,28 @@
       font-family: var(--medium-font) !important;
       font-size: 1rem !important;
       max-width: 549px !important;
+   } 
+ }
+}
+
+@media screen and (max-width: 1200px) {
+   .convinced-container{
+      position: relative;
    }
-  
+
+   .convinced-content{
+      position: absolute;
+   }
    
 }
+
+@media screen and (max-width: 800px) {
+   .convinced-container{
+      position: relative;
+   }
+
+   .convinced-content{
+      position: absolute;
+   }
+   
 }
