--- a/app/assets/stylesheets/pages/landing-page/testimonies.scss
+++ b/app/assets/stylesheets/pages/landing-page/testimonies.scss
@@ -88,39 +88,106 @@
 }
 
 @media screen and (max-width: 1600px)  {
-   .image-container{justify-content: center; align-items: center;}
-   .cardy-1{position: absolute; left: -100px; opacity:0.96;}
-   .cardy-2{position: absolute; left: 500px; opacity: 0.96;}
-   .cardy-3{position: absolute; left: -90px; opacity: 0.96;}
-   .cardy-4{position: absolute; left: 450px; opacity: 0.96;}
-   .cardy-5{opacity: 0.99;}
+   .image-container{
+      justify-content: center; 
+      align-items: center;
+   }
+
+   .cardy-1{
+      position: absolute;
+      left: -100px;
+      opacity:0.96;
+   }
+
+   .cardy-2{
+      position: absolute;
+      left: 500px;
+      opacity: 0.96;
+   }
+
+   .cardy-3{ 
+      position: absolute;
+      left: -90px; 
+      opacity: 0.96;
+   }
+
+   .cardy-4{
+      position: absolute; 
+      left: 450px; 
+      opacity: 0.96;
+   }
+
+   .cardy-5{
+      opacity: 0.99;
+   }
 }
 
 @media screen and (max-width: 1200px)  {
-   .image-container{justify-content: center; align-items: center;}
-   .cardy-1{position: absolute; right: 100px; opacity:0.96;}
-   .cardy-2{position: absolute; left: 500px; opacity: 0.96;}
-   .cardy-3{position: absolute; left: -90px; opacity: 0.96;}
-   .cardy-4{position: absolute; left: 450px; opacity: 0.96;}
-   .cardy-5{opacity: 0.99;}
+   .image-container{
+      justify-content: center;
+      align-items: center;
+   }
+
+   .cardy-1{
+      position: absolute;
+      right: 100px; 
+      opacity:0.96;
+   }
+
+   .cardy-2{
+      position: absolute;
+      left: 500px;
+      opacity: 0.96;
+   }
+
+   .cardy-3{
+      position: absolute;
+      left: -90px; 
+      opacity: 0.96;
+   }
+
+   .cardy-4{
+      position: absolute;
+      left: 450px;
+      opacity: 0.96;
+   }
+
+   .cardy-5{
+      opacity: 0.99;
+   }
 }
 
 @media screen and (max-width: 900px)  {
-   .back-img{position: absolute;}
-   .cardy-1{position: relative; top: -100px; left: 5px;}
-   .cardy-2{position: relative; top: 200px; left: 5px;}
-   .cardy-3{position: relative; top: -260px; left: 5px;}
-   .cardy-4{display: none;}
-   .cardy-5{display: none;}
+   .back-img{
+      position: absolute;
+      right: 40px;
+      max-width: 600px;
+   }
+
+
+   .cardy-1{
+      position: relative;
+      top: -100px; 
+      left: 5px;
+   }
+
+   .cardy-2{
+      position: relative; 
+      top: 200px; 
+      left: 5px;
+   }
+
+   .cardy-3{
+      position: relative;
+      top: -260px; 
+      left: 5px;
+   }
+
+   .cardy-4{
+      display: none;
+   }
+
+   .cardy-5{
+      display: none;
+   }
 }
-@media screen and (max-width: 500px)  {
-   .back-img{position: absolute;}
-   .cardy-1{position: relative; top: -100px; left: 5px;}
-   .cardy-2{position: relative; top: 200px; left: 5px;}
-   .cardy-3{position: relative; top: -260px; left: 5px;}
-   .cardy-4{display: none;}
-   .cardy-5{display: none;}
-}
-
-
-
