--- a/app/assets/stylesheets/pages/landing-page/features.scss
+++ b/app/assets/stylesheets/pages/landing-page/features.scss
@@ -90,3 +90,11 @@
       text-align: center;
    }
 }
+
+@media screen and (max-width:900px) {
+   .feature{
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+   }
+}
